--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@alethio/cms",
-  "version": "1.0.0-beta.12",
+  "name": "@digiv3rse/cms",
+  "version": "1.0.0",
   "description": "Alethio Content Management System",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -31,7 +31,7 @@
     "husky": "^1.3.1",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
-    "plugin-api": "npm:@alethio/cms-plugin-api@^1.0.0-beta.8",
+    "plugin-api": "npm:@digiv3rse/cms-plugin-api@^1.0.0-beta.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "rimraf": "^2.6.2",
